Added SQLAlchemy instead of shitty flask_mysql, some more basic frontend work

--- a/msg-service/ChatGebetaMsg/templates/chat/index.html
+++ b/msg-service/ChatGebetaMsg/templates/chat/index.html
@@ -3,7 +3,7 @@
 {% endblock %} {% block content %}
 <div id="chat">
   <div id="messages"></div>
-  <form id="message-form">
+  <form id="message-form" method="post" action="./api/generate">
     <input type="text" id="message" />
     <input type="submit" value="Send" />
   </form>
