--- a/msg-service/ChatGebetaMsg/templates/base.html
+++ b/msg-service/ChatGebetaMsg/templates/base.html
@@ -21,3 +21,41 @@
   <div class="flash">{{ message }}</div>
   {% endfor %} {% block content %}{% endblock %}
 </section>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js"></script>
+<script>
+  msgs = []
+  async function onGetBotResponse(ev) {
+    ev.preventDefault()
+    const { value } = document.querySelector('.message-input')
+    const msgsContainer = document.querySelector('.messages-list')
+    // get the id from the route, if it exists
+    const id = window.location.pathname.split('/').pop() ?? null
+    console.log(id)
+    // const id =
+    try {
+      msgsContainer.innerHTML = 'Loading...'
+      // The url is on the same host, so we can use relative path
+      const data = { message: value, id }
+      console.log(data)
+      const res = await axios.post('./api/generate', data)
+      console.log(res.data)
+      msgs.push(res.data)
+      renderMsgs()
+    } catch (err) {
+      console.log(err)
+      msgsContainer.innerHTML = ''
+      document.querySelector('.error-continer').innerHTML = 'Something went wrong, please try again'
+    }
+  }
+
+  function renderMsgs() {
+    const msgsContainer = document.querySelector('.messages-list')
+    msgsContainer.innerHTML = 'Loading...'
+    msgsContainer.innerHTML = msgs.map(({ user_input, bot_response }) => {
+      return `<article class="message">
+                <div class="user-input">${user_input}</div>
+                <div class="bot-response">${bot_response}</div>
+              </article>`
+    })
+  }
+</script>
