Added full chat history functionality

--- a/msg-service/ChatGebetaMsg/templates/chat/index.html
+++ b/msg-service/ChatGebetaMsg/templates/chat/index.html
@@ -10,6 +10,7 @@
   {% endfor %} {% endif %}
   <div class="messages-list"></div>
   <div class="error-continer"></div>
+  <div class="loading-container"></div>
   <form id="message-form" onsubmit="onGetBotResponse(event)">
     <input type="text" class="message-input" />
     <button>Send</button>
