--- a/msg-service/ChatGebetaMsg/templates/base.html
+++ b/msg-service/ChatGebetaMsg/templates/base.html
@@ -3,16 +3,26 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
 <nav>
   <h1>Flaskr</h1>
-  <ul>
+  <ul class="nav-bar">
     {% if g.user %}
-    <li><span>{{ g.user['username'] }}</span></li>
-    <li><a href="{{ url_for('auth.logout') }}">Log Out</a> {% else %}</li>
+    <li>
+      <span>{{ g.user['username'] }}</span>
+    </li>
+    <li>
+      <a href="{{ url_for('auth.logout') }}">Log Out</a>
+    </li>
 
-    <li><a href="{{ url_for('auth.register') }}">Register</a></li>
+    <li>
+      <a href="{{ url_for('chat.chat_history') }}">Your History</a>
+    </li>
+    {% else %}
+    <li>
+      <a href="{{ url_for('auth.register') }}">Register</a>
+    </li>
     <li>
       <a href="{{ url_for('auth.login') }}">Log In</a>
-      {% endif %}
     </li>
+    {% endif %}
   </ul>
 </nav>
 <section class="content">
@@ -24,31 +34,30 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js"></script>
 <script>
   msgs = []
+
+  onWelcome()
   async function onGetBotResponse(ev) {
     ev.preventDefault()
     const { value } = document.querySelector('.message-input')
     const msgsContainer = document.querySelector('.messages-list')
-    // get the id from the route, if it exists
-    const id = window.location.pathname.split('/').pop() ?? null
-    console.log(id)
-    // const id =
+
     try {
-      msgsContainer.innerHTML = 'Loading...'
-      // The url is on the same host, so we can use relative path
-      const data = { message: value, id }
-      const currUrl = window.location.href
-      console.log(currUrl)
-      const res = await axios.post(`${currUrl}/api/generate`, data)
+      document.querySelector('.loading-container').innerHTML = 'Loading...'
+      // The url is on the same host, so we grab the current url and append the api endpoint
+      const data = { message: value }
+      const endpoint = '/api/generate'
+      const res = await axios.post(_getUrl(endpoint), data)
       msgs.push(res.data)
       renderMsgs()
     } catch (err) {
       console.log(err)
-      msgsContainer.innerHTML = ''
+      document.querySelector('.loading-container') = 'Loading...'
       document.querySelector('.error-continer').innerHTML = 'Something went wrong, please try again'
     }
   }
 
   function renderMsgs() {
+    document.querySelector('.loading-container').innerHTML = ''
     const msgsContainer = document.querySelector('.messages-list')
     msgsContainer.innerHTML = 'Loading...'
     msgsContainer.innerHTML = msgs.map(({ user_input, bot_response }) => {
@@ -57,5 +66,25 @@
                 <div class="bot-response">${bot_response}</div>
               </article>`
     })
+  }
+
+  async function onWelcome() {
+    const {
+      data: { msg },
+    } = await axios.get('/chat/api')
+    const elWelcome = document.createElement('li')
+    elWelcome.innerHTML =
+    `
+    <li>
+      <div>${msg}</div>
+      <a href="/chat">Click here to start a new chat</a>
+    </li>
+    `
+    document.querySelector('.nav-bar').appendChild(elWelcome)
+  }
+
+  function _getUrl(endpoint) {
+    const currUrl = window.location.href
+    return currUrl + endpoint
   }
 </script>
