--- a/msg-service/ChatGebetaMsg/templates/base.html
+++ b/msg-service/ChatGebetaMsg/templates/base.html
@@ -51,7 +51,7 @@
       renderMsgs()
     } catch (err) {
       console.log(err)
-      document.querySelector('.loading-container') = 'Loading...'
+      document.querySelector('.loading-container').value = ''
       document.querySelector('.error-continer').innerHTML = 'Something went wrong, please try again'
     }
   }
@@ -73,8 +73,7 @@
       data: { msg },
     } = await axios.get('/chat/api')
     const elWelcome = document.createElement('li')
-    elWelcome.innerHTML =
-    `
+    elWelcome.innerHTML = `
     <li>
       <div>${msg}</div>
       <a href="/chat">Click here to start a new chat</a>
@@ -84,7 +83,7 @@
   }
 
   function _getUrl(endpoint) {
-  //  get the entire route, without the host
+    //  get the entire route, without the host
     const currUrl = window.location.href.split('/').slice(3).join('/')
     return `/${currUrl}${endpoint}`
   }
