--- a/msg-service/ChatGebetaMsg/templates/base.html
+++ b/msg-service/ChatGebetaMsg/templates/base.html
@@ -46,7 +46,9 @@
       // The url is on the same host, so we grab the current url and append the api endpoint
       const data = { message: value }
       const endpoint = '/api/generate'
-      const res = await axios.post(_getUrl(endpoint), data)
+      const apiURl = _getUrl(endpoint)
+      console.log(apiURl)
+      const res = await axios.post(apiURl, data)
       msgs.push(res.data)
       renderMsgs()
     } catch (err) {
