--- a/msg-service/ChatGebetaMsg/templates/base.html
+++ b/msg-service/ChatGebetaMsg/templates/base.html
@@ -87,6 +87,6 @@
   function _getUrl(endpoint) {
     //  get the entire route, without the host
     const currUrl = window.location.href.split('/').slice(3).join('/')
-    return `/${currUrl}${endpoint}`
+    return `/${currUrl}/${endpoint}`
   }
 </script>
