--- a/msg-service/ChatGebetaMsg/templates/base.html
+++ b/msg-service/ChatGebetaMsg/templates/base.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
-<title>{% block title %}{% endblock %} - Flaskr</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+<title>{% block title %}{% endblock %} - ChatGebeta</title>
+<link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet"/>
 <nav>
-  <h1>Flaskr</h1>
-  <ul class="nav-bar">
-    {% if g.user %}
-    <li>
-      <span>{{ g.user['username'] }}</span>
-    </li>
-    <li>
-      <a href="{{ url_for('auth.logout') }}">Log Out</a>
-    </li>
+    <h1>ChatGebeta</h1>
+    <ul class="nav-bar">
+        {% if g.user %}
+        <li>
+            <span>{{ g.user['username'] }}</span>
+        </li>
+        <li>
+            <a href="{{ url_for('auth.logout') }}">Log Out</a>
+        </li>
 
-    <li>
-      <a href="{{ url_for('chat.chat_history') }}">Your History</a>
-    </li>
-    {% else %}
-    <li>
-      <a href="{{ url_for('auth.register') }}">Register</a>
-    </li>
-    <li>
-      <a href="{{ url_for('auth.login') }}">Log In</a>
-    </li>
-    {% endif %}
-  </ul>
+        <li>
+            <a href="{{ url_for('chat.chat_history') }}">Your History</a>
+        </li>
+        {% else %}
+        <li>
+            <a href="{{ url_for('auth.register') }}">Register</a>
+        </li>
+        <li>
+            <a href="{{ url_for('auth.login') }}">Log In</a>
+        </li>
+        {% endif %}
+    </ul>
 </nav>
 <section class="content">
-  <header>{% block header %}{% endblock %}</header>
-  {% for message in get_flashed_messages() %}
-  <div class="flash">{{ message }}</div>
-  {% endfor %} {% block content %}{% endblock %}
+    <header>{% block header %}{% endblock %}</header>
+    {% for message in get_flashed_messages() %}
+    <div class="flash">{{ message }}</div>
+    {% endfor %} {% block content %}{% endblock %}
 </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js"></script>
 <script>
@@ -92,4 +92,5 @@
 
     return `${url}${endpoint}`
   }
+
 </script>
