--- a/msg-service/ChatGebetaMsg/templates/chat/index.html
+++ b/msg-service/ChatGebetaMsg/templates/chat/index.html
@@ -1,19 +1,20 @@
 {% extends 'base.html' %} {% block header %}
 <h1>{% block title %}Chat{% endblock %}</h1>
 {% endblock %} {% block content %}
-<div id="chat">
+<div class="chat-container">
+  <div class="msg-container">
     {% if msgs %} {% for msg in msgs %}
     <article class="message">
-        <div class="user-input">{{msg['user_input']}}</div>
-        <div class="bot-response">{{msg['bot_response']}}</div>
+      <div class="user-input">{{msg['user_input']}}</div>
+      <div class="bot-response">{{msg['bot_response']}}</div>
     </article>
     {% endfor %} {% endif %}
-    <div class="messages-list"></div>
-    <div class="error-continer"></div>
-    <div class="loading-container"></div>
-    <form id="message-form" onsubmit="onGetBotResponse(event)">
-        <input class="message-input" type="text"/>
-        <button>Send</button>
-    </form>
+  </div>
+  <div class="error-container"></div>
+  <div class="loading-container"></div>
+  <form class="message-form" onsubmit="onGetBotResponse(event)">
+    <input class="message-input" type="text" />
+    <button>Send</button>
+  </form>
 </div>
 {% endblock %}
