--- a/msg-service/ChatGebetaMsg/templates/base.html
+++ b/msg-service/ChatGebetaMsg/templates/base.html
@@ -12,6 +12,9 @@
     {% endif %}
     <nav class="main-nav">
       <ul class="nav-list">
+        <li>
+          <a href="{{ url_for('chat.index') }}">Home</a>
+        </li>
         {% if g.user %}
         <li>
           <a href="{{ url_for('auth.logout') }}">Log Out</a>
